# Engram

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.json
.claude/hooks/: session-save.sh  session-start.sh
.claude/skills/engram-search/: SKILL.md
.claude/skills/engram-search/references/: tool-guide.md
benchmarks/: bench_chunker.cpp
scripts/: export_model.py  mcp_test_server.py  test_embeddings.py
src/: main.cpp
src/chunker/: chunk_store.cpp  chunk_store.hpp  chunker.hpp  regex_chunker.cpp  regex_chunker.hpp  treesitter_chunker.cpp  treesitter_chunker.hpp
src/embedder/: embedder.hpp  ort_embedder.cpp  ort_embedder.hpp  ort_tokenizer.cpp  ort_tokenizer.hpp  tokenizer.hpp
src/index/: hnsw_index.cpp  hnsw_index.hpp  vector_index.hpp
src/mcp/: mcp_server.cpp  mcp_server.hpp  project_context.hpp  protocol.hpp  tools.cpp  tools.hpp
src/session/: session_embedder.hpp  session_embedder_impl.cpp  session_embedder_impl.hpp  session_store.cpp  session_store.hpp
src/watcher/: watcher.hpp  win_watcher.cpp  win_watcher.hpp
tests/: test_chunker.cpp  test_embedder.cpp  test_index.cpp  test_mcp_protocol.cpp  test_placeholder.cpp  test_session_embedder.cpp  test_treesitter_chunker.cpp  test_watcher.cpp
